--- a/Mentorierte_Arbeit_Induktion_Rekursion/kapitel03.tex
+++ b/Mentorierte_Arbeit_Induktion_Rekursion/kapitel03.tex
@@ -19,15 +19,9 @@ Da das Produkt $n\cdot (n-1)\cdot\ldots\cdot 3\cdot 2\cdot 1$ häufig in Erschei
 \begin{aufgabe}{aufgabe:0301}
 Wir gehen davon aus, dass Sie bereits das Produkt $12!$  berechnet haben. Wie können Sie dieses Vorwissen einsetzen, um $13!$ relativ schnell zu berechnen? Wie lässt sich für $n\in\Nunit$ die Fakultät $n!$ aus $(n-1)!$ berechnen?
 \end{aufgabe}
-\begin{antwort}{aufgabe:0301}
-Wir beobachten, dass $13! = 13\cdot 12!$ gilt. Somit müssen wir $12!$ lediglich mit $13$ multiplizieren um $13!$ zu erhalten. Für $n\in\Nunit$ gilt allgemein
-\begin{align*}
-    n! = n\cdot (n-1)!.
-\end{align*}
-\end{antwort}
 
 \noindent
-Die in \cref{aufgabe:0301} gemachte Beobachtung ist zwar einfach, hat aber dennoch bedeutende Implikationen. Um $5!$ zu berechnen, müssen wir lediglich multiplizieren können und wissen, wie $4!$ berechnet wird. Das Problem der Berechnung von $5!$ lässt sich also auf eine Multiplikation und die Berechnung von $4!$ reduzieren. Doch genau gleich verhält es sich mit dem Problem der Berechnung von $4!$. Diese Reduktion auf immer kleinere aber gleichartige Probleme kann solange fortgeführt werden, bis wir bei $0!$ ankommen. Betrachten Sie die folgende Berechnung:
+Die in \cref{aufgabe:0301} gemachte Beobachtung ist zwar einfach, hat aber dennoch bedeutende Implikationen. Um $5!$ zu berechnen, müssen wir lediglich multiplizieren können und wissen, wie $4!$ berechnet wird. Das Problem der Berechnung von $5!$ lässt sich also auf eine Multiplikation und die Berechnung von $4!$ reduzieren. Doch genau gleich verhält es sich mit dem Problem der Berechnung von $4!$. Diese Reduktion auf immer kleinere, aber gleichartige Probleme kann so lange fortgeführt werden, bis wir bei $0!$ ankommen. Betrachten Sie die folgende Berechnung:
 \begin{align*}
     \textcolor{Red}{5!} &= 5\cdot\underbrace{4\cdot 3\cdot 2\cdot 1}_{\textcolor{Blue}{4!}} \\
     \textcolor{Blue}{4!} &= 4\cdot\underbrace{3\cdot 2\cdot 1}_{\textcolor{Green}{3!}} \\
@@ -35,7 +29,7 @@ Die in \cref{aufgabe:0301} gemachte Beobachtung ist zwar einfach, hat aber denno
     \textcolor{Goldenrod}{2!} &= 2\cdot\underbrace{1}_{\textcolor{Fuchsia}{1!}} \\
     \textcolor{Orchid}{1!} &= 1\cdot\underbrace{0!}_{1} = 1
 \end{align*}
-Durch \enquote{Rückwertseinsetzen} erhalten wir nun den Wert für $5!$:
+Durch \enquote{Rückwärtseinsetzen} erhalten wir nun den Wert für $5!$:
 \begin{align*}
     \textcolor{Orchid}{1!} &= 1\cdot 0! = 1 \\
     \textcolor{Goldenrod}{2!} &= 2\cdot\textcolor{Orchid}{1!} = 2\cdot 1 = 2 \\
@@ -47,7 +41,7 @@ Durch \enquote{Rückwertseinsetzen} erhalten wir nun den Wert für $5!$:
 \noindent
 Nach diesen Betrachtungen ist plausibel, dass Folgendes eine sinnvolle Definition der \tib{Fakultät}\index{Fakultät} ist:
 \begin{definition}[Fakultät]{definition:fac}
-Es sei $n$ eine natürliche Zahl. Dann definieren wir die Fakultät $n!$ von $n$ durch
+Es sei $n$ eine natürliche Zahl. Dann definieren wir die Fakultät $n!$ von $n$ durch:
 \begin{align}\label{eq:fakultaet}
 n! := 
   \begin{cases}
@@ -56,12 +50,11 @@ n! :=
   \end{cases}
 \end{align}
 \end{definition}
-
 \noindent
 Beachten Sie, dass \cref{definition:fac} der Fakultät selbst die Fakultät verwendet! Eine auf diese Weise definierte Funktion wird \tib{rekursiv}\index{rekursiv} genannt.
 
 \section{Finde den Star! (konstruktive Induktion)}
-Das folgende Beispiel stammt aus \cite{Datenstrukturen}. In einem Raum befinden sich $n\in\N$ Personen, wobei $n\geq 2$ ist. Wir wollen den \textit{Star} unter diesen $n$ Personen finden. Ein Star ist definiert als eine Person, welche niemanden anderen kennt, jedoch von allen gekannt wird. Die einzige erlaubte \textit{Operation} um einen Star zu identifizieren, ist eine Person $A$ zu fragen:
+Das folgende Beispiel stammt aus \cite{Datenstrukturen}. In einem Raum befinden sich $n\in\N$ Personen, wobei $n\geq 2$ ist. Wir wollen den \textit{Star} unter diesen $n$ Personen finden. Ein Star ist definiert als eine Person, welche niemanden anderen kennt, jedoch von allen gekannt wird. Die einzige erlaubte \textit{Operation}, um einen Star zu identifizieren, ist, eine Person $A$ zu fragen:
 \begin{center}
     \enquote{\textcolor{Red}{Kennst Du Person $B$?}},
 \end{center}
@@ -70,11 +63,8 @@ wobei $A\neq B$ gilt.
 \begin{aufgabe}{aufgabe:0350}
     Begründen Sie, warum es unter $n$ Personen in einem Raum nicht zwei verschiedene Stars geben kann.
 \end{aufgabe}
-\begin{antwort}{aufgabe:0350}
-Angenommen es gäbe zwei Stars $S_1$ und $S_2$ in dem Raum. Da $S_2$ ein Star ist, wird $S_2$ von allen anderen gekannt. Insbesondere kennt $S_1$ die Person $S_2$. Damit kann aber $S_1$ selbst kein Star sein. Dies ist ein Widerspruch zu unserer Annahme, dass sowohl $S_1$ als auch $S_2$ Stars sind.
-\end{antwort}
 \noindent
-Wir wollen einen Star in Raum mit möglichst wenig Fragen (Operationen) finden. Eine naive Lösung besteht darin, jede Person über jede andere zu befragen. Für $n=4$ könnte ein Resultat einer solchen Befragung wie folgt aussehen:
+Wir wollen einen Star im Raum mit möglichst wenig Fragen (Operationen) finden. Eine naive Lösung besteht darin, jede Person über jede andere zu befragen. Für $n=4$ könnte ein Resultat einer solchen Befragung wie folgt aussehen:
 \begin{table}[H]
 \centering
     \begin{tabular}{ccccc}
@@ -93,7 +83,7 @@ Wir wollen versuchen, die Anzahl der Fragen zu reduzieren. Dazu wenden wir ein V
     \item Für $n=2$ genügen zwei Fragen.
     \item Sei $n>2$: Schicke eine Person $A$ weg. Finde nun den Star unter $n-1$ Personen (kleineres Problem). Überprüfe danach $A$ mit $2(n-1)$ Fragen.
 \end{itemize}
-Doch dieses Vorgehen können wir weiter fortsetzen und dieselbe Strategie auf das Problem mit $n-1$ Personen (das kleinere Problem) anwenden. Schliesslich gelangen wir bei dem Problem mit 2 Personen an, für welches zwei Fragen genügen. Insgesamt stellen wir also
+Doch dieses Vorgehen können wir weiter fortsetzen und dieselbe Strategie auf das Problem mit $n-1$ Personen (das kleinere Problem) anwenden. Schliesslich gelangen wir zu dem Problem mit 2 Personen, für welches zwei Fragen genügen. Insgesamt stellen wir also fest:
 \begin{align*}
     F(n) &= \\
     &2(n-1) + F(n-1) =\\
@@ -109,14 +99,6 @@ Somit haben wir gegenüber der ursprünglichen naiven Lösung (befrage alle zu a
 \begin{aufgabe}{aufgabe:0351}
 Erklären Sie, warum eine einzige Frage an eine beliebige Person im Raum stets genügt, um eine Person zu identifizieren, welche sicherlich kein Star ist.
 \end{aufgabe}
-\begin{antwort}{aufgabe:0351}
-\begin{itemize}
-    \item Frage eine beliebige Person $A$ im Raum, ob sie eine andere beliebige Person $B$ kennt.
-    \item Falls $A$ die Person $B$ kennt $\Rightarrow A$ ist kein Star.
-    \item Falls $A$ die Person $B$ nicht kennt $\Rightarrow B$ ist kein Star.
-\end{itemize}
-In jedem der Fälle haben wir mit einer einzigen Frage eine Person identifiziert, welche sicherlich kein Star ist.
-\end{antwort}
 \noindent
 Zum Schluss bleiben zwei Personen, von denen möglicherweise eine Person $X$ der Star ist. Wir überprüfen mit jeder Person, die draussen ist, ob $X$ ein Star sein kann. Mit dieser Verbesserung erhalten wir $F(2) = 2$ und $F(n) = 1 + F(n-1) + 2$ für $n\geq 3$, also insgesamt:
 \begin{align}\label{eq:star}
@@ -134,15 +116,6 @@ Wir haben für die benötigten Fragen $F(n)$ für einen Raum mit $n$ Personen di
 \end{align*}
 Beweisen Sie durch vollständige Induktion, dass $F(n) := 3n - 4$ tatsächlich \cref{eq:star} erfüllt. Berechnen Sie schliesslich, wie viele Fragen wir mit diesem Verfahren bei $n = 1000$ Personen benötigen.
 \end{aufgabe}
-\begin{antwort}{aufgabe:0352}
-Der Induktionsanfang ist klar, denn für $n = 2$ benötigen wir genau zwei Fragen. Sei nun die Behauptung für ein $n\in\N$ mit $n\geq 2$ wahr. Dann gilt
-\begin{align*}
-    F(n+1) = F(n) + 3 = 3n-4 + 3 = 3n - 1,
-\end{align*}
-doch dies ist genau die Behauptung, denn $3(n+1)-4 = 3n+3-4=3n-1$.
-
-Gemäss der soeben bewiesenen Formel, sind mit unserem Vorgehen genau $F(1000) = 3\cdot 1000 - 4 = 2996$ Fragen notwendig. Beachten Sie, dass wir in keinster Weise behaupten, dass dieses Vorgehen optimal ist.
-\end{antwort}
 
 \clearpage
 \section{Rekursion in Algorithmen}
@@ -182,19 +155,19 @@ return 3 * factorial(2) # Rekursionsschritt (Zeile 5)
                                  factorial(0)
                                  return 1 # Rekursionsanfang (Zeile 2)
 
-## Rückwertseinsetzen ##
+## Rückwärtseinsetzen ##
 factorial(1) = 1 * factorial(0) = 1 * 1 = 1
 factorial(2) = 2 * factorial(1) = 2 * 1 = 2
 factorial(3) = 3 * factorial(2) = 3 * 2 = 6
 \end{lstlisting}
 \lstset{style=mystyle}
 \noindent
-Der anfängliche Aufruf \pythoninline{factorial(3)} löst (rekursiv) in seinem \pythoninline{return} auf (seiner) Zeile 5 den Aufruf \pythoninline{factorial(2)} aus. Dieser löst rekursiv einen weiteren Funktionsaufruf aus. Dies geht so lange weiter, bis zum ersten Mal ein Aufruf den Rekursionsanfang (Zeile 2) erreicht. Danach können die noch ausstehenden \pythoninline{return}-Statements endlich komplettiert werden (Rückwertseinsetzen).
+Der anfängliche Aufruf \pythoninline{factorial(3)} löst (rekursiv) in seinem \pythoninline{return} auf (seiner) Zeile 5 den Aufruf \pythoninline{factorial(2)} aus. Dieser löst rekursiv einen weiteren Funktionsaufruf aus. Dies geht so lange weiter, bis zum ersten Mal ein Aufruf den Rekursionsanfang (Zeile 2) erreicht. Danach können die noch ausstehenden \pythoninline{return}-Statements endlich komplettiert werden (Rückwärtseinsetzen).
 
 \clearpage
 
 \begin{aufgabe}{aufgabe:0303}
-Sei $a\in\R$ und $n$ eine natürliche Zahl. Wir definieren den Potenzausdruck $a^n$ rekursiv durch
+Seien $a\in\R$ und $n$ eine natürliche Zahl. Wir definieren den Potenzausdruck $a^n$ rekursiv durch
 \[
   a^n := 
   \begin{cases}
@@ -204,15 +177,6 @@ Sei $a\in\R$ und $n$ eine natürliche Zahl. Wir definieren den Potenzausdruck $a
 \]
 Implementieren Sie eine Python-Funktion \pythoninline{def potenz(a,n)}, welche $a^n$ gemäss dieser rekursiven Definition berechnet.
 \end{aufgabe}
-\begin{antwort}{aufgabe:0303}
-\begin{lstlisting}[language=Python,caption=rekursive Potenz-Funktion]
-def potenz(a,n):
-    if n == 0:
-        return 1
-    else:
-        return a * potenz(a,n-1)
-\end{lstlisting}
-\end{antwort}
 
 \begin{aufgabe}{aufgabe:0302}
 Implementieren Sie eine Python-Funktion \pythoninline{def factorial_loop(n)}, welche
@@ -221,23 +185,11 @@ Implementieren Sie eine Python-Funktion \pythoninline{def factorial_loop(n)}, we
 \end{align*}
 nicht rekursiv, sondern mit Hilfe einer einzigen Schleife (\pythoninline{for}-loop) berechnet.
 \end{aufgabe}
-\begin{antwort}{aufgabe:0302}
-\begin{lstlisting}[language=Python,caption=rekursive Potenz-Funktion]
-def factorial_loop(n):
-    factorial = 1
-    if n == 0:
-        return factorial
-    else:
-        for k in range(1,n+1):
-            factorial *= k
-        return factorial
-\end{lstlisting}
-\end{antwort}
 
 \begin{aufgabe}[The One]{aufgabe:0304}
 Sie arbeiten für eine respektable Softwareentwicklungsfirma. Ihr Arbeitskollege \textit{Thomas A. Anderson} hat folgende Python-Funktion zu Ihrem Softwareprojekt hinzugefügt:
 \begin{lstlisting}[language=Python]
-# m und n sind natürliche Zahlen
+# m und n sind natürliche Zahlen.
 def unbekannt(m,n):
     if m == 0:
         return 0
@@ -246,7 +198,7 @@ def unbekannt(m,n):
 \end{lstlisting}
 \begin{aenum}
     \item Handelt es sich bei \pythoninline{unbekannt} um eine rekursiv oder nicht rekursiv definierte Funktion? Begründen Sie Ihre Antwort.
-    \item Thomas A. Anderson hat sich schon einige Tage nicht in der Firma blicken lassen und Sie können ihn telefonisch nicht erreichen. Abgesehen von dem Kommentar in Zeile 1, hat er die Funktion \pythoninline{unbekannt} nicht dokumentiert und der Name der Funktion hilft uns nicht weiter. Erklären Sie genau, was die Funktion tut und geben Sie ihr einen treffenden Namen.
+    \item Thomas A. Anderson hat sich schon einige Tage nicht in der Firma blicken lassen und Sie können ihn telefonisch nicht erreichen. Abgesehen von dem Kommentar in Zeile 1 hat er die Funktion \pythoninline{unbekannt} nicht dokumentiert und der Name der Funktion hilft uns nicht weiter. Erklären Sie genau, was die Funktion tut und geben Sie ihr einen treffenden Namen.
     
     \noindent
     Tipp: Berechnen Sie die Werte
@@ -260,13 +212,6 @@ def unbekannt(m,n):
     \item Was ist der Rückgabewert von \pythoninline{unbekannt(100,50)}?
 \end{aenum}
 \end{aufgabe}
-\begin{antwort}{aufgabe:0304}
-\begin{aenum}
-    \item Die Python-Funktion ist rekursiv definiert, da sie sich selbst aufruft.
-    \item Die unbekannte Funktion multipliziert die Zahlen $m$ und $n$, realisiert also die Operation $m\cdot n$. In der Tat sieht man, dass die Funktion so lange $n$ addiert, bis $m = 0$ ist. Ein treffender Name für die Funktion wäre zum Beispiel \pythoninline{mult(m,n)}.
-    \item Der Rückgabewert ist $100\cdot 50 = 5000$.
-\end{aenum}
-\end{antwort}
 
 \clearpage
 \begin{aufgabe}{aufgabe:0305}
@@ -282,15 +227,7 @@ Ausgabe: 11
 
 \end{lstlisting}
 \end{aufgabe}
-\begin{antwort}{aufgabe:0305}
-\begin{lstlisting}[language=Python]
-def sum_rek(L):
-    if len(L) == 1:
-        return L[0]
-    else:
-        return sum_rek(L[:-1]) + L[-1]
-\end{lstlisting}
-\end{antwort}
+
 
 
 \begin{aufgabe}{aufgabe:0377}
@@ -305,39 +242,13 @@ Beispiele:
 Das \textit{leere Wort}, also das Wort der Länge $0$, ist ebenfalls ein Palindrom. Schreiben Sie ein rekursives Python-Programm, welches entscheidet, ob ein gegebenes Wort \verb|w| ein Palindrom ist oder nicht.
 \end{aufgabe}
 
-\begin{antwort}{aufgabe:0377}
-\begin{lstlisting}[language=Python]
-def check_palindrom(w):
-    w = w.upper()
-    if len(wort) <= 1:
-        return True
-    elif w[0] != w[-1]:
-        return False
-    return check_palindrom(w[1:-1])
-\end{lstlisting}
-oder noch kürzer:
-\begin{lstlisting}[language=Python]
-def check_palindrom(w):
-    return (True if len(w) <= 1 else (check_palindrom(w[1:-1]) if w[0].lower() == w[-1].lower() else False))
-\end{lstlisting}
-\end{antwort}
-
 \begin{aufgabe}{aufgabe:0308}
 Schreiben Sie eine Python-Funktion \pythoninline{summe(n)}, welche die Summe
 \begin{align*}
-    \sum_{k=0}^n k := 0 + 1 + \ldots + n.
+    \sum_{k=0}^n k := 0 + 1 + \ldots + n
 \end{align*}
 der ersten $n+1$ natürlichen Zahlen $0,1,\ldots ,n$ rekursiv berechnet.
 \end{aufgabe}
-\begin{antwort}{aufgabe:0308}
-\begin{lstlisting}[language=Python,caption=rekursive Berechnung einer Summe]
-def summe(n):
-    if n == 0:
-        return 0
-    else:
-        return n + summe(n-1)
-\end{lstlisting}
-\end{antwort}
 
 \begin{aufgabe}{aufgabe:0311}
 Schreiben Sie eine Python-Funktion \pythoninline{produkt(n)}, welche das Produkt
@@ -346,15 +257,6 @@ Schreiben Sie eine Python-Funktion \pythoninline{produkt(n)}, welche das Produkt
 \end{align*}
 für $n\in\Nunit$ rekursiv berechnet.
 \end{aufgabe}
-\begin{antwort}{aufgabe:0311}
-\begin{lstlisting}[language=Python,caption=rekursive Berechnung eines Produkts]
-def produkt(n):
-    if n == 1:
-        return 1
-    else:
-        return n**3 * produkt(n-1)
-\end{lstlisting}
-\end{antwort}
 
 \clearpage
 
@@ -362,7 +264,7 @@ def produkt(n):
 In der zweiten Fassung des Buches \textit{Liber abbaci} (\enquote{Buch der Rechenkunst}) beschrieb der italienische Mathematiker \textit{Leonardo da Pisa}, bekannt als \textit{Fibonacci}, das Wachstum einer Kaninchenpopulation.
 
 \begin{itemize}
-    \item Jedes geschlechtsreife Paar Kaninchen wirft pro Monat genau ein neues Paar Kaninchen (ein Weibchen und ein Männchen). Die Austragungszeit (Dauer der Schwangerschaft) dauert bei Kaninchen also immer genau einen Monat. Jeden Monat kommt also eine neue Generation von Kaninchen zur Welt.
+    \item Jedes geschlechtsreife Paar Kaninchen wirft pro Monat genau ein Paar Kaninchen (ein Weibchen und ein Männchen). Die Austragungszeit (Dauer der Schwangerschaft) dauert bei Kaninchen also immer genau einen Monat. Jeden Monat kommt also eine neue Generation von Kaninchen zur Welt.
     \item Ein neugeborenes Paar von Kaninchen wird erst am Ende seines ersten Lebensmonats geschlechtsreif und wirft entsprechend erst Ende seines zweiten Lebensmonats sein erstes Paar Kaninchen.
     \item Kein Kaninchen stirbt, kein Kanninchen verlässt das betrachtete System und kein Kanninchen wird, ausser durch Geburt, in das System hineingebracht.
 \end{itemize}
@@ -390,7 +292,7 @@ Wir haben also drei Gleichungen für die Population:
 \end{align}
 
 \noindent
-Einsetzen von Gleichung \ref{eq:Fib2} in Gleichung \ref{eq:Fib1} liefert:
+Das Einsetzen von Gleichung \ref{eq:Fib2} in Gleichung \ref{eq:Fib1} liefert:
 \begin{align*}
     \textcolor{Blue}{G_{n+2}} &= \textcolor{Red}{G_{n}} + \textcolor{Red}{g_{n}} + \textcolor{Blue}{g_{n+1}} \\
     &\iff \\
@@ -434,97 +336,14 @@ Die Fibonacci-Folge ist rekursiv definiert durch
 \begin{aufgabe}{aufgabe:0306}
 Implementieren Sie eine Python-Funktion \pythoninline{def fibonacci(n)}, welche für gegebenes $n\in\N$ das $n$-te Glied der Fibonacci-Folge rekursiv berechnet. Geben Sie schliesslich die ersten $25$ Glieder der Fibonacci-Folge aus.
 \end{aufgabe}
-\begin{antwort}{aufgabe:0306}
-\begin{lstlisting}[language=Python,caption=rekursive Berechnung der Fibonacci-Folge]
-def fibonacci(n):
-    if n <= 1:
-        return n
-    else:
-        return fibonacci(n-1) + fibonacci(n-2)
-\end{lstlisting}
-\noindent
-Die ersten $25$ Glieder der Fibonacci-Folge lauten:
-\begin{lstlisting}[language=Python,caption=Die ersten 25 Glieder der Fibonacci-Folge]
-0
-1
-1
-2
-3
-5
-8
-13
-21
-34
-55
-89
-144
-233
-377
-610
-987
-1597
-2584
-4181
-6765
-10946
-17711
-28657
-46368
-\end{lstlisting}
-\end{antwort}
 
 \begin{aufgabe}{aufgabe:0307}
 Versuchen wir $F_{40}$ mit der Python-Funktion aus \cref{aufgabe:0306} zu berechnen, stellen wir fest, dass die Berechnung bereits recht lange dauert. Erklären Sie, warum die Berechnung der Glieder der Fibonacci-Folge mit Hilfe der \cref{definition:fibonacci} sehr aufwendig ist. Wie viele Funktionsaufrufe werden für die Berechnung von $F(5)$ benötigt? Wie viele für $F(10)$?
 \end{aufgabe}
 
-\begin{antwort}{aufgabe:0307}
-Die rekursiv definierte Python-Funktion aus \cref{aufgabe:0306} berechnet viele Folgeglieder mehrfach und arbeitet somit sehr \enquote{verschwenderisch}. Beispielsweise werden bei der Berechnung von $F_{40}$ die Berechnungen von $F_{39}$ und $F_{38}$ aufgerufen. Doch zur Berechnung von $F_{39}$ muss nochmals $F_{38}$ berechnet werden, und so weiter. In \cref{fig:fibonacciBaum} wird gezeigt, welche Funktionsaufrufe für die rekursive Berechnung von $F(5)$ benötigt werden. Beachten Sie, dass beispielsweise der Wert fib(2) dreimal berechnet wird. Es ist klar, dass die Anzahl der benötigten Funktionsaufrufe (und somit sicherlich auch die benötigten Rechenoperationen) zur Berechnung von $F(n)$ mit wachsendem $n$ stark ansteigt. Jede Fibonacci-Zahl, ausser $F(1)$ und $F(2)$, löst jeweils zwei Funktionsaufrufe aus. Damit ist es nicht schwierig, einzusehen, dass die Anzahl $A(n)$ der Funktionsaufrufe mindestens so schnell wächst wie die Fibonacci-Folge. Die genaue Anzahl ist gegeben durch
-\begin{align*}
-    A(n) = 2F(n+1) - 1.
-\end{align*}
-In \cref{ch:Kapitel04} werden Sie sehen, dass die Fibonacci-Folge exponentiell wächst.
-\begin{figure}[H]
-\centering
-\begin{forest}
-sn edges/.style={for tree={
-parent anchor=south, child anchor=north}},
-sn edges
-[fib(5)
-[fib(4) [fib(3) [fib(2) [fib(1)] [fib(0)] ] [fib(1)] ] [fib(2) [fib(1)] [fib(0)] ]]  [fib(3) [fib(2) [fib(1)] [fib(0)] ] [fib(1)]]
-]
-\end{forest}
-\caption{Die Anzahl Funktionsaufrufe für $F(5)$ ist 15.}
-\label{fig:fibonacciBaum}
-\end{figure}
-\end{antwort}
-
 \begin{aufgabe}{aufgabe:0358}
 Überlegen Sie sich, wie Sie die ersten $30$ Glieder der Fibonacci-Folge \enquote{von Hand} berechnen würden. Verwenden Sie diese Intuition um eine Python-Funktion \pythoninline{def fibonacci_fast(n)} zu schreiben, welche für gegebenes $n\in\N$ das $n$-te Glied der Fibonacci-Folge deutlich schneller und auf nicht rekursive Weise berechnet. Berechnen Sie mit Hilfe dieser Funktion das Folgeglied $F_{100}$.
 \end{aufgabe}
-\begin{antwort}{aufgabe:0358}
-Die folgende Python-Funktion startet zur Berechnung von $F_n$ bei den Startwerten $F_0$ und $F_1$ und berechnet \enquote{von unten her} nacheinander (man spricht in diesem Zusammenhang von \textit{iterativer Berechnung}) die Nachfolger. Dabei werden keine Berechnungen \enquote{verschwendet}.
-\begin{lstlisting}[language=Python,caption=iterative Berechnung der Fibonacci-Folge]
-def fibonacci_fast(n):
-    # Startwerte
-    f0 = 0
-    f1 = 1
-    if n == 0:
-        return f0
-    elif n == 1:
-        return f1
-    
-    for k in range(n-1):
-        f2 = f1 + f0
-        # Update
-        f0 = f1
-        f1 = f2
-    return f2
-\end{lstlisting}
-Mit Hilfe dieser Funktion berechnen wir (in sehr kurzer Zeit)
-\begin{align*}
-    F_{100} = 354224848179261915075.
-\end{align*}
-\end{antwort}
 
 \begin{aufgabe}{aufgabe:0309}
 (*) Wir bezeichnen für $n\in\N$ mit $F_n$ die $n$-te Fibonacci-Zahl. Betrachten Sie die Gleichung
@@ -537,37 +356,16 @@ für $n\in\N$.
     \item Beweisen Sie \cref{eq:sumfib}.
 \end{aenum}
 \end{aufgabe}
-\begin{antwort}{aufgabe:0309}
-\begin{aenum}
-    \item Die $(n+2)$-te Fibonacci-Zahl ist um $1$ grösser als die Summe der Fibonacci-Zahlen $F_0,\ldots, F_n$.
-    \item Wir beweisen die Behauptung durch vollständige Induktion. Für $n = 0$ haben wir
-    \begin{align*}
-        1 + \sum_{k=0}^{0} F_k = 1 + F_0 = 1 + 0 = 1 = F_2.
-    \end{align*}
-    Wir gehen nun von der Induktionsvoraussetzung
-    \begin{align*}
-        F_{n+1} = 1 + \sum_{k=0}^{n-1} F_k
-    \end{align*}
-        aus und finden
-        \begin{align*}
-            &F_{n+2} = \\
-            &F_n + F_{n+1} = \\
-            &F_n + \lr{1 + \sum_{k=0}^{n-1}F_k} = \\
-            &1 + \sum_{k=0}^{n} F_k.
-        \end{align*}
-\end{aenum}
-\end{antwort}
-
 
 \clearpage
 \section{Technische Umsetzung rekursiver Programme}\label{technisch}
-In diesem Abschnitt werden wir den Übergang von der rein mathematischen Betrachtung rekursiver Algorithmen zu deren technischen Umsetzung vollziehen. Dazu betrachten wir ein Beispiel eines eleganten rekursiven Algorithmus, welcher für eine gegebene natürliche Zahl $n$, sämtliche binären Strings der Länge $n$ ausgibt. Insbesondere sollte der Algorithmus für die gegebenen Eingaben in den folgenden Testfällen die angegebenen Ausgaben erzeugen:
+In diesem Abschnitt werden wir den Übergang von der rein mathematischen Betrachtung rekursiver Algorithmen zu deren technischer Umsetzung vollziehen. Dazu betrachten wir ein Beispiel eines eleganten rekursiven Algorithmus, welcher für eine gegebene natürliche Zahl $n$ sämtliche binären Strings der Länge $n$ ausgibt. Insbesondere sollte der Algorithmus für die gegebenen Eingaben in den folgenden Testfällen die angegebenen Ausgaben erzeugen:
 \begin{lstlisting}[language=Python,caption=binäre Strings rekursiv ausgeben,numbers=none]
 TESTFALL 0
 Eingabe: n = 0
 Ausgaben:
 
-(es wird eine leere Zeile (leerer String) ausgegeben)
+(Es wird eine leere Zeile (leerer String) ausgegeben.)
 TESTFALL 1
 Eingabe: n = 1
 Ausgaben:
@@ -592,7 +390,7 @@ Ausgaben:
 110
 111
 \end{lstlisting}
-Sie sind gerne eingeladen, an dieser Stelle vorerst nicht weiterzulesen und den Algorithmus selber zu schreiben.
+Sie sind gerne eingeladen, an dieser Stelle vorerst nicht weiterzulesen und den Algorithmus selbst zu schreiben.
 
 Unser Vorschlag für einen entsprechenden rekursiven Algorithmus ist in \cref{listing:binary} gegeben.
 \begin{lstlisting}[language=Python,caption=binaryStrings,label=listing:binary]
@@ -604,10 +402,10 @@ def binaryStrings(n, w = ''):
     binaryStrings(n-1, w + '1')
     #return # optional
 \end{lstlisting}
-Zur Vereinfachung und Konkretisierung der Beschreibung der technischen Realisation rekursiver Algorithmen, werden wir sämtliche Betrachtungen dieses Abschnitts auf den Algorithmus in \cref{listing:binary} beziehen. Der Algorithmus beginnt mit dem leeren String und baut alle gesuchten Strings durch systematisches \enquote{Anhängen} von Nullen und Einsen auf. Zur Abkürzung schreiben wir anstelle von \verb|binaryString(...)| im Folgenden \verb|f(...)|.
+Zur Vereinfachung und Konkretisierung der Beschreibung der technischen Realisation rekursiver Algorithmen werden wir sämtliche Betrachtungen dieses Abschnitts auf den Algorithmus in \cref{listing:binary} beziehen. Der Algorithmus beginnt mit dem leeren String und baut alle gesuchten Strings durch systematisches \enquote{Anhängen} von Nullen und Einsen auf. Zur Abkürzung schreiben wir anstelle von \verb|binaryString(...)| im Folgenden \verb|f(...)|.
 
 \noindent
-Betrachten wir den Aufruf \verb|f(2,'')| um alle Strings der Länge $2$ auszugeben. Die Arbeitsschritte, welche der Funktionsaufruf \verb|f(2,'')| einleitet, sind in \cref{fig:binary} dargestellt. Die \textcolor{Green!55}{grünen} Knoten stellen Funktionsaufrufe (Aufrufe von \verb|f|) dar. Die \textcolor{Gold!85}{goldenen} Knoten stellen Aufrufe der Python-Funktion \verb|print| dar. Beim Schritt mit Nummer $\textcolor{Blue}{0}$ erfolgt der anfängliche Aufruf \verb|f(2,'')|. In diesem Aufruf wird in Programmzeile $5$ der Funktionsaufruf \verb|f(1,'0')| ausgelöst (Schritt $\textcolor{Blue}{1}$). Beachten Sie, dass der ursprüngliche Aufruf \verb|f(2,'')| seine Arbeit noch nicht abgeschlossen hat! In Programmzeile $5$ des Funktionsaufrufs \verb|f(1,'0')| wird nun der Aufruf \verb|f(0,'00')| ausgelöst. In diesem Aufruf ist die \verb|if|-Bedingung auf Programmzeile $2$ erfüllt, sodass die Ausgabe \verb|print('00')| erfolgt (Schritt $3$) und der \verb|return| Aufruf auf Programmzeile $4$ erfolgt. Der Aufruf \verb|f(0,'00')| ist beendet und er springt zurück zum Aufruf \verb|f(1,'0')| (Schritt $\textcolor{Red}{4}$). Der Funktionsaufruf \verb|f(1,'0')| kann nun (endlich) zu Programmzeile $6$ gelangen und den Aufruf \verb|f(0,'01')| auslösen (Schritt $\textcolor{Blue}{5}$).
+Betrachten wir den Aufruf \verb|f(2,'')|, um alle Strings der Länge $2$ auszugeben. Die Arbeitsschritte, welche der Funktionsaufruf \verb|f(2,'')| einleitet, sind in \cref{fig:binary} dargestellt. Die \textcolor{Green!55}{grünen} Knoten stellen Funktionsaufrufe (Aufrufe von \verb|f|) dar. Die \textcolor{Gold!85}{goldenen} Knoten stellen Aufrufe der Python-Funktion \verb|print| dar. Beim Schritt mit Nummer $\textcolor{Blue}{0}$ erfolgt der anfängliche Aufruf \verb|f(2,'')|. In diesem Aufruf wird in Programmzeile $5$ der Funktionsaufruf \verb|f(1,'0')| ausgelöst (Schritt $\textcolor{Blue}{1}$). Beachten Sie, dass der ursprüngliche Aufruf \verb|f(2,'')| seine Arbeit noch nicht abgeschlossen hat! In Programmzeile $5$ des Funktionsaufrufs \verb|f(1,'0')| wird nun der Aufruf \verb|f(0,'00')| ausgelöst. In diesem Aufruf ist die \verb|if|-Bedingung auf Programmzeile $2$ erfüllt, sodass die Ausgabe \verb|print('00')| erfolgt (Schritt $3$) und der \verb|return|-Aufruf auf Programmzeile $4$ erfolgt. Der Aufruf \verb|f(0,'00')| ist beendet und er springt zurück zum Aufruf \verb|f(1,'0')| (Schritt $\textcolor{Red}{4}$). Der Funktionsaufruf \verb|f(1,'0')| kann nun (endlich) zu Programmzeile $6$ gelangen und den Aufruf \verb|f(0,'01')| auslösen (Schritt $\textcolor{Blue}{5}$).
 
 \begin{figure}[H]
 \centering
@@ -648,7 +446,7 @@ Betrachten wir den Aufruf \verb|f(2,'')| um alle Strings der Länge $2$ auszugeb
             (f1-1) edge [bend left, sloped, midway, above, Red] node {$16$} (f2-leer)
     ;   
 \end{tikzpicture}
-\caption{Schematische Darstellung der Arbeitsschritte zur rekursiven Ausgabe aller binären Strings der Länge $2$.}
+\caption{schematische Darstellung der Arbeitsschritte zur rekursiven Ausgabe aller binären Strings der Länge $2$}
 \label{fig:binary}
 \end{figure}
 \noindent
@@ -660,6 +458,240 @@ In Computern wird für jeden Funktionsaufruf (Prozedur) ein Abschnitt im Speiche
 
 Ruft eine Prozedur \verb|A| eine andere Prozedur \verb|B| auf, so wird im Stack-Frame von Prozedur \verb|B| eine sogenannte \textit{Rücksprung-Adresse} gespeichert. Diese Adresse gibt an, wo im Speicher die Prozedur \verb|A| beginnt. Dadurch wird ermöglicht, dass Prozedur \verb|B| zu Prozedur \verb|A| \enquote{zurückspringen} kann (\textit{jump and link}). Mehr Details bezüglich der Funktionsweise von Computern und rekursiven Programmen finden Sie in den hervorragenden Texten \cite{Malvino} und \cite{Sauter}.
 \end{myBox}
+
+
+
+
+
+\begin{antwort}{aufgabe:0301}
+Wir beobachten, dass $13! = 13\cdot 12!$ gilt. Somit müssen wir $12!$ lediglich mit $13$ multiplizieren um $13!$ zu erhalten. Für $n\in\Nunit$ gilt allgemein
+\begin{align*}
+    n! = n\cdot (n-1)!.
+\end{align*}
+\end{antwort}
+
+
+\begin{antwort}{aufgabe:0350}
+Angenommen es gäbe zwei Stars $S_1$ und $S_2$ in dem Raum. Da $S_2$ ein Star ist, wird $S_2$ von allen anderen gekannt. Insbesondere kennt $S_1$ die Person $S_2$. Damit kann aber $S_1$ selbst kein Star sein. Dies ist ein Widerspruch zu unserer Annahme, dass sowohl $S_1$ als auch $S_2$ Stars sind.
+\end{antwort}
+
+
+\begin{antwort}{aufgabe:0351}
+\begin{itemize}
+    \item Frage eine beliebige Person $A$ im Raum, ob sie eine andere beliebige Person $B$ kennt.
+    \item Falls $A$ die Person $B$ kennt $\Rightarrow A$ ist kein Star.
+    \item Falls $A$ die Person $B$ nicht kennt $\Rightarrow B$ ist kein Star.
+\end{itemize}
+In jedem der Fälle haben wir mit einer einzigen Frage eine Person identifiziert, welche sicherlich kein Star ist.
+\end{antwort}
+
+
+\begin{antwort}{aufgabe:0352}
+Der Induktionsanfang ist klar, denn für $n = 2$ benötigen wir genau zwei Fragen. Sei nun die Behauptung für ein $n\in\N$ mit $n\geq 2$ wahr. Dann gilt
+\begin{align*}
+    F(n+1) = F(n) + 3 = 3n-4 + 3 = 3n - 1,
+\end{align*}
+doch dies ist genau die Behauptung, denn $3(n+1)-4 = 3n+3-4=3n-1$.
+
+Gemäss der soeben bewiesenen Formel sind mit unserem Vorgehen genau $F(1000) = 3\cdot 1000 - 4 = 2996$ Fragen notwendig. Beachten Sie, dass wir in keinster Weise behaupten, dass dieses Vorgehen optimal ist.
+\end{antwort}
+
+
+\begin{antwort}{aufgabe:0303}
+\begin{lstlisting}[language=Python,caption=rekursive Potenz-Funktion]
+def potenz(a,n):
+    if n == 0:
+        return 1
+    else:
+        return a * potenz(a,n-1)
+\end{lstlisting}
+\end{antwort}
+
+
+\begin{antwort}{aufgabe:0302}
+\begin{lstlisting}[language=Python,caption=rekursive Potenz-Funktion]
+def factorial_loop(n):
+    factorial = 1
+    if n == 0:
+        return factorial
+    else:
+        for k in range(1,n+1):
+            factorial *= k
+        return factorial
+\end{lstlisting}
+\end{antwort}
+
+
+\begin{antwort}{aufgabe:0304}
+\begin{aenum}
+    \item Die Python-Funktion ist rekursiv definiert, da sie sich selbst aufruft.
+    \item Die unbekannte Funktion multipliziert die Zahlen $m$ und $n$, realisiert also die Operation $m\cdot n$. In der Tat sieht man, dass die Funktion so lange $n$ addiert, bis $m = 0$ ist. Ein treffender Name für die Funktion wäre zum Beispiel \pythoninline{mult(m,n)}.
+    \item Der Rückgabewert ist $100\cdot 50 = 5000$.
+\end{aenum}
+\end{antwort}
+
+
+\begin{antwort}{aufgabe:0305}
+\begin{lstlisting}[language=Python]
+def sum_rek(L):
+    if len(L) == 1:
+        return L[0]
+    else:
+        return sum_rek(L[:-1]) + L[-1]
+\end{lstlisting}
+\end{antwort}
+
+
+\begin{antwort}{aufgabe:0377}
+\begin{lstlisting}[language=Python]
+def check_palindrom(w):
+    w = w.upper()
+    if len(wort) <= 1:
+        return True
+    elif w[0] != w[-1]:
+        return False
+    return check_palindrom(w[1:-1])
+\end{lstlisting}
+oder noch kürzer:
+\begin{lstlisting}[language=Python]
+def check_palindrom(w):
+    return (True if len(w) <= 1 else (check_palindrom(w[1:-1]) if w[0].lower() == w[-1].lower() else False))
+\end{lstlisting}
+\end{antwort}
+
+
+\begin{antwort}{aufgabe:0308}
+\begin{lstlisting}[language=Python,caption=rekursive Berechnung einer Summe]
+def summe(n):
+    if n == 0:
+        return 0
+    else:
+        return n + summe(n-1)
+\end{lstlisting}
+\end{antwort}
+
+
+\begin{antwort}{aufgabe:0311}
+\begin{lstlisting}[language=Python,caption=rekursive Berechnung eines Produkts]
+def produkt(n):
+    if n == 1:
+        return 1
+    else:
+        return n**3 * produkt(n-1)
+\end{lstlisting}
+\end{antwort}
+
+
+\begin{antwort}{aufgabe:0306}
+\begin{lstlisting}[language=Python,caption=rekursive Berechnung der Fibonacci-Folge]
+def fibonacci(n):
+    if n <= 1:
+        return n
+    else:
+        return fibonacci(n-1) + fibonacci(n-2)
+\end{lstlisting}
+\noindent
+Die ersten $25$ Glieder der Fibonacci-Folge lauten:
+\begin{lstlisting}[language=Python,caption=die ersten 25 Glieder der Fibonacci-Folge]
+0
+1
+1
+2
+3
+5
+8
+13
+21
+34
+55
+89
+144
+233
+377
+610
+987
+1597
+2584
+4181
+6765
+10946
+17711
+28657
+46368
+\end{lstlisting}
+\end{antwort}
+
+
+\begin{antwort}{aufgabe:0307}
+Die rekursiv definierte Python-Funktion aus \cref{aufgabe:0306} berechnet viele Folgeglieder mehrfach und arbeitet somit sehr \enquote{verschwenderisch}. Beispielsweise werden bei der Berechnung von $F_{40}$ die Berechnungen von $F_{39}$ und $F_{38}$ aufgerufen. Doch zur Berechnung von $F_{39}$ muss nochmals $F_{38}$ berechnet werden und so weiter. In \cref{fig:fibonacciBaum} wird gezeigt, welche Funktionsaufrufe für die rekursive Berechnung von $F(5)$ benötigt werden. Beachten Sie, dass beispielsweise der Wert fib(2) dreimal berechnet wird. Es ist klar, dass die Anzahl der benötigten Funktionsaufrufe (und somit sicherlich auch die benötigten Rechenoperationen) zur Berechnung von $F(n)$ mit wachsendem $n$ stark ansteigt. Jede Fibonacci-Zahl, ausser $F(1)$ und $F(2)$, löst jeweils zwei Funktionsaufrufe aus. Damit ist es nicht schwierig, einzusehen, dass die Anzahl $A(n)$ der Funktionsaufrufe mindestens so schnell wächst wie die Fibonacci-Folge. Die genaue Anzahl ist gegeben durch
+\begin{align*}
+    A(n) = 2F(n+1) - 1.
+\end{align*}
+In \cref{ch:Kapitel04} werden Sie sehen, dass die Fibonacci-Folge exponentiell wächst.
+\begin{figure}[H]
+\centering
+\begin{forest}
+sn edges/.style={for tree={
+parent anchor=south, child anchor=north}},
+sn edges
+[fib(5)
+[fib(4) [fib(3) [fib(2) [fib(1)] [fib(0)] ] [fib(1)] ] [fib(2) [fib(1)] [fib(0)] ]]  [fib(3) [fib(2) [fib(1)] [fib(0)] ] [fib(1)]]
+]
+\end{forest}
+\caption{Die Anzahl Funktionsaufrufe für $F(5)$ ist 15.}
+\label{fig:fibonacciBaum}
+\end{figure}
+\end{antwort}
+
+
+\begin{antwort}{aufgabe:0358}
+Die folgende Python-Funktion startet zur Berechnung von $F_n$ bei den Startwerten $F_0$ und $F_1$ und berechnet \enquote{von unten her} nacheinander (man spricht in diesem Zusammenhang von \textit{iterativer Berechnung}) die Nachfolger. Dabei werden keine Berechnungen \enquote{verschwendet}.
+\begin{lstlisting}[language=Python,caption=iterative Berechnung der Fibonacci-Folge]
+def fibonacci_fast(n):
+    # Startwerte
+    f0 = 0
+    f1 = 1
+    if n == 0:
+        return f0
+    elif n == 1:
+        return f1
+    
+    for k in range(n-1):
+        f2 = f1 + f0
+        # Update
+        f0 = f1
+        f1 = f2
+    return f2
+\end{lstlisting}
+Mit Hilfe dieser Funktion berechnen wir (in sehr kurzer Zeit)
+\begin{align*}
+    F_{100} = 354224848179261915075.
+\end{align*}
+\end{antwort}
+
+
+\begin{antwort}{aufgabe:0309}
+\begin{aenum}
+    \item Die $(n+2)$-te Fibonacci-Zahl ist um $1$ grösser als die Summe der Fibonacci-Zahlen $F_0,\ldots, F_n$.
+    \item Wir beweisen die Behauptung durch vollständige Induktion. Für $n = 0$ haben wir
+    \begin{align*}
+        1 + \sum_{k=0}^{0} F_k = 1 + F_0 = 1 + 0 = 1 = F_2.
+    \end{align*}
+    Wir gehen nun von der Induktionsvoraussetzung
+    \begin{align*}
+        F_{n+1} = 1 + \sum_{k=0}^{n-1} F_k
+    \end{align*}
+        aus und finden
+        \begin{align*}
+            &F_{n+2} = \\
+            &F_n + F_{n+1} = \\
+            &F_n + \lr{1 + \sum_{k=0}^{n-1}F_k} = \\
+            &1 + \sum_{k=0}^{n} F_k.
+        \end{align*}
+\end{aenum}
+\end{antwort}
+
+
 
 \clearpage
 \shipoutAnswer
