--- a/Mentorierte_Arbeit_Induktion_Rekursion/main.tex
+++ b/Mentorierte_Arbeit_Induktion_Rekursion/main.tex
@@ -43,10 +43,12 @@
         \include{kapitel06} % Sudoku
 		\appendix
 		\input{appendix.tex} % Appendix: Prinzip der rekursiven Definition
-        \printbibliography
+
+		\backmatter
+        \printbibliography[heading=bibintoc]
 		\printindex
 		
-		\backmatter
+
 		%\bibliographystyle{plain}
         %\bibliography{refs}
 		
