--- a/Mentorierte_Arbeit_Induktion_Rekursion/vorwort.tex
+++ b/Mentorierte_Arbeit_Induktion_Rekursion/vorwort.tex
@@ -1,16 +1,17 @@
-\chapter*{Vorwort}
+\chapter{Vorwort}
 %\addcontentsline{toc}{chapter}{Vorwort}
  
 \section*{Inhalt dieser Unterlagen}
-Der Fokus dieses Textes liegt auf dem Vermitteln eines fundierten Verständnisses der Prinzipien der vollständigen Induktion und der rekursiven Definition. Wir zeigen auf, wie diese beiden Prinzipien zusammenhängen und wozu sie nützlich sind.
+%\addcontentsline{toc}{sec}{Inhalt dieser Unterlagen}
+Der Fokus dieses Textes liegt auf der Entwicklung eines fundierten Verständnisses der Prinzipien der vollständigen Induktion und der rekursiven Definition. Wir zeigen auf, wie diese beiden Prinzipien zusammenhängen und wozu sie nützlich sind.
 
-Die sieben Kapitel dieses Skripts sind in zwei grossen Teile \textit{Mathematische Diskussion} (\cref{ch:Kapitel00,ch:Kapitel01,ch:Kapitel02,ch:Kapitel03}) und \textit{Ausgewählte rekursive Probleme und Algorithmen} (\cref{ch:Kapitel04,ch:Kapitel05,ch:Kapitel06}) gegliedert. 
+Die sieben Kapitel (plus ein Anhang) dieses Skripts sind in die zwei grossen Teile \textit{Mathematische Diskussion} (\cref{ch:Kapitel00,ch:Kapitel01,ch:Kapitel02,ch:Kapitel03}) und \textit{Ausgewählte rekursive Probleme und Algorithmen} (\cref{ch:Kapitel04,ch:Kapitel05,ch:Kapitel06,ch:Appendix}) gegliedert.
 
-\cref{ch:Kapitel00} behandelt einiges an Vorwissen, welches im Verlauf des Skripts benötigt wird. In \cref{ch:Kapitel01} beginnen wir mit der Definition der natürlichen Zahlen durch die Peano-Axiome, von welchen eines \textit{Induktionsaxiom} genannt wird. \cref{ch:Kapitel02} befasst sich mit den weitreichenden direkten Konsequenzen dieses Induktionsaxioms. In \cref{ch:Kapitel03} tasten wir uns an rekursive Definition heran und beweisen einen mächtigen Satz zum Prinzip der rekursiven Definition. Schliesslich befassen wir uns in diesem Kapitel damit, wie rekursive Funktionen in Rechnern realisiert werden können. Die letzten drei \cref{ch:Kapitel04,ch:Kapitel05,,ch:Kapitel06} beinhalten ausgewählte Anwendungen der im ersten Teil entwickelten Theorie.
+\cref{ch:Kapitel00} behandelt einiges an Vorwissen, welches im Verlauf des Skripts benötigt wird. In \cref{ch:Kapitel01} beginnen wir mit der Definition der natürlichen Zahlen durch die Peano-Axiome, von welchen eines \textit{Induktionsaxiom} genannt wird. \cref{ch:Kapitel02} befasst sich mit den weitreichenden direkten Konsequenzen dieses Induktionsaxioms. In \cref{ch:Kapitel03} tasten wir uns an rekursive Definitionen heran. Schliesslich befassen wir uns in diesem Kapitel damit, wie rekursive Funktionen in Rechnern realisiert werden können. Die letzten drei \cref{ch:Kapitel04,ch:Kapitel05,,ch:Kapitel06} beinhalten ausgewählte Anwendungen der im ersten Teil entwickelten Theorie.
 
 \section*{Vorwissen und Zielpublikum}
 %\addcontentsline{toc}{sec}{Zielpublikum}
-In vielen Unterlagen werden die Themen der Induktion und Rekursion separat und scheinbar unabhängig voneinander behandelt. Zudem wird gerade die Rekursion häufig nur anhand von Beispielen gelehrt. Für dieses Skript haben wir uns zum Ziel genommen, die beiden Prinzipien auf mathematisch solide Fundamente zu stellen und ihren Zusammenhang zu verdeutlichen. Um dieses ambitionierte Ziel zu erreichen, waren wir von Anfang an bereit, einen (für das Gymnasiums) hohen Grad an Schwierigkeit und abstrakten Formalismus in Kauf zu nehmen.
+In vielen Unterlagen werden die Themen der Induktion und Rekursion separat und scheinbar unabhängig voneinander behandelt. Zudem wird gerade die Rekursion häufig nur anhand von Beispielen gelehrt. Für dieses Skript haben wir uns zum Ziel genommen, die beiden Prinzipien auf mathematisch solide Fundamente zu stellen und ihren Zusammenhang zu verdeutlichen. Um dieses ambitionierte Ziel zu erreichen, waren wir von Anfang an bereit, einen (für das Gymnasium) hohen Grad an Schwierigkeit und abstrakten Formalismus in Kauf zu nehmen.
 
 Diese Unterlagen richten sich an Lernende des letzten Jahres des Gymnasiums. Besonders geeignet sind die Unterlagen für den Unterricht mit besonders leistungsfähigen Lernenden (zum Beispiel in einem Ergänzungsfach der Informatik).
 
@@ -22,12 +23,13 @@ Einige besondere Vorkenntnisse werden in \cref{ch:Kapitel00} eingeführt. Insbes
 \end{itemize}
 
 \section*{Arbeiten mit diesen Unterlagen und Abhängigkeiten der Kapitel}
-%\addcontentsline{toc}{sec}{Arbeiten mit diesen Unterlagen}
-Die drei \cref{ch:Kapitel01,ch:Kapitel02,ch:Kapitel03} im ersten Teil (\textit{Mathematische Diskussion}) sollten nacheinander gelesen und bearbeitet werden. \cref{ch:Kapitel02} baut auf \cref{ch:Kapitel01} auf und \cref{ch:Kapitel03} auf den vorgängigen Kapiteln. Die drei \cref{ch:Kapitel04,ch:Kapitel05,ch:Kapitel06} im zweiten Teil (\textit{Ausgewählte rekursive Probleme und Algorithmen}) bauen zwar alle auf der Theorie des ersten Teils auf, besitzen aber untereinander keine Abhängigkeit. So kann beispielsweise \cref{ch:Kapitel06} problemlos bearbeitet werden, ohne die \cref{ch:Kapitel04,ch:Kapitel05} gelesen zu haben.
+%\addcontentsline{toc}{sec}{Arbeiten mit diesen Unterlagen und Abhängigkeiten der Kapitel}
+Die drei \cref{ch:Kapitel01,ch:Kapitel02,ch:Kapitel03} im ersten Teil (\textit{Mathematische Diskussion}) sollten nacheinander gelesen und bearbeitet werden: \cref{ch:Kapitel02} baut auf \cref{ch:Kapitel01} auf und \cref{ch:Kapitel03} auf die vorgängigen Kapitel. Die drei \cref{ch:Kapitel04,ch:Kapitel05,ch:Kapitel06} im zweiten Teil (\textit{Ausgewählte rekursive Probleme und Algorithmen}) bauen zwar alle auf der Theorie des ersten Teils auf, besitzen aber untereinander keine Abhängigkeit. So kann beispielsweise \cref{ch:Kapitel06} problemlos bearbeitet werden, ohne die \cref{ch:Kapitel04,ch:Kapitel05} gelesen zu haben.
 
 Mit einem Ausrufezeichen \enquote{!} markierte Elemente (Kapitel, Abschnitte, Unterabschnitte, Aufgaben) sind besonders anspruchsvoll. Die Bearbeitung und das Lesen eines mit einem Stern \enquote{*} markierten Elements ist optional. Diese \textit{optionalen} Elemente sind nicht essenziell für das Verständnis der ihnen nachfolgenden Teile.
 
 \section*{Zeitlicher Aufwand}
+%\addcontentsline{toc}{sec}{Zeitlicher Aufwand}
 Wir geben eine Aufstellung der ungefähr zu erwartenden Lektionenzahl für jedes Kapitel an. In dieser Zeit wird es nicht allen Lernenden möglich sein, sämtliche Aufgaben zu lösen.
 \begin{description}
 	\item[Kapitel 0 (Vorwissen):] 2 Lektionen
