--- a/Mentorierte_Arbeit_Induktion_Rekursion/kapitel04.tex
+++ b/Mentorierte_Arbeit_Induktion_Rekursion/kapitel04.tex
@@ -8,7 +8,7 @@ In \cref{listing:binary} haben wir bereits eine Python-Funktion geschrieben, wel
 TESTFALL 0
 Eingabe: n = 0, Ausgaben:
 
-(es wird eine leere Zeile (leerer String) ausgegeben)
+(Es wird eine leere Zeile (leerer String) ausgegeben.)
 TESTFALL 1
 Eingabe: n = 1, Ausgaben:
 0
@@ -27,26 +27,12 @@ Eingabe: n = 3, Ausgaben:
 101
 \end{lstlisting}
 \end{aufgabe}
-\begin{antwort}{aufgabe:0401}
-\begin{lstlisting}[language=Python,caption=Binäre Strings ohne $11$]
-def print_binary_without_11(n, w = ''):
-    if n == 0:
-        print(w)
-        return
-    
-    if len(w) == 0 or  w[-1] != '1':
-        print_binary_without_11(n-1, w + '0')
-        print_binary_without_11(n-1, w + '1')
-    else:
-        print_binary_without_11(n-1, w + '0')
-\end{lstlisting}
-\end{antwort}
 
 \clearpage
 
 
 \section{Anzahl der binären Strings ohne 11}
-Sei $n$ eine natürliche Zahl. Wir bezeichnen mit $L_n$ die Menge aller binären Strings der Wörter $n$, die nicht den Teilstring $11$ enthalten und setzen $N(n) = \abs{L_n}$. Wir wollen $N(n)$, also die Anzahl der Elemente in $L_n$, rekursiv bestimmen. Offensichtlich gilt $N(0) = 1$, denn nur der leere String hat die Länge $0$ und dieser enthält nicht den Teilstring $11$. Des Weiteren gilt $N(1) = 2$, da die Strings $0$ und $1$ beide nicht den Teilstring $11$ enthalten.
+Sei $n$ eine natürliche Zahl. Wir bezeichnen mit $L_n$ die Menge aller binären Strings der Wörter $n$, die nicht den Teilstring $11$ enthalten, und setzen $N(n) = \abs{L_n}$. Wir wollen $N(n)$, also die Anzahl der Elemente in $L_n$, rekursiv bestimmen. Offensichtlich gilt $N(0) = 1$, denn nur der leere String hat die Länge $0$ und dieser enthält nicht den Teilstring $11$. Des Weiteren gilt $N(1) = 2$, da die Strings $0$ und $1$ beide nicht den Teilstring $11$ enthalten.
 
 \begin{aufgabe}{aufgabe:0402}
 Vervollständigen Sie \cref{table:Nn}.
@@ -66,26 +52,7 @@ Vervollständigen Sie \cref{table:Nn}.
         \label{table:Nn}
     \end{table}
 \end{aufgabe}
-\begin{antwort}{aufgabe:0402}
-    \begin{table}[H]
-        \begin{center}
-        \begin{tabular}{c|c}
-        $n$ & $N(n)$ \\ \hline
-        $0$ & $1$ \\
-        $1$ & $2$ \\ 
-        $2$ & $3$ \\
-        $3$ & $5$ \\
-        $4$ & $8$ \\
-        $5$ & $13$ \\ 
-        $6$ & $21$ \\
-        $7$ & $34$ \\
-        $8$ & $55$ \\
-        \end{tabular}
-        \end{center}
-        \caption{ausgefüllte Tabelle für $N(n)$}
-        \label{table:Nncompleted}
-    \end{table}
-\end{antwort}
+\noindent
 Betrachten wir nun einen binären String $w$ der Länge $n+1$ mit $n\geq 1$. Angenommen $w$ liegt in $L_{n+1}$, dann enthält offensichtlich auch keiner der Teilstrings von $w$ das Muster $11$. Dann können wir $w\in L_{n+1}$ schreiben als
 \begin{align*}
     w = xab,
@@ -99,25 +66,6 @@ Wir nehmen an, dass die Anzahlen $N(n)$ und $N(n-1)$ für ein $n$ mit $n\geq 1$ 
 \end{align*}
 wobei $x\in L_{n-1}$ und $a,b\in\lrc{0,1}$. Unterscheiden Sie nun zwei Fälle $b = 0$ und $b = 1$ für das Symbol $b$. Drücken Sie $N(n+1)$ durch $N(n)$ und $N(n-1)$ aus.
 \end{aufgabe}
-\begin{antwort}{aufgabe:0403}
-    Wir unterscheiden zwei möglichen Fälle für das Symbol $b$.
-    \begin{itemize}
-        \item Falls $b = 0$, dann hat $w$ die Form $w = xab = xa0$. Da $b = 0$ ist, kann $a$ sowohl $0$ als auch $1$ sein (es gibt keine Einschränkung für $a$). Dann hat also $w$ die Form
-        \begin{align*}
-            w = \underbrace{xa}_{=:y}0 = y0,
-        \end{align*}
-        wobei $y$ ein beliebiger String aus $L_n$ sein darf und $L_n$ enthält $N(n)$ Elemente.
-        \item  Falls $b = 1$, dann muss $a = 0$ gelten. Für $x$ ist dann aber ein beliebiger String aus $L_{n-1}$ möglich und $L_{n-1}$ enthält $N(n-1)$ Elemente.
-    \end{itemize}
-    Da für $b$ genau zwei Fälle möglich sind und diese Fälle keine \enquote{Überlappung} aufweisen, können wir die jeweiligen Anzahlen addieren und erhalten die Gleichung
-    \begin{align}\label{eq:rekkurenz}
-        N(n+1) = N(n) + N(n-1).
-    \end{align}
-    Dies sieht aber genauso aus wie die rekursive Definition der Fibonacci-Folge! Aufgrund der bereits gefundenen Anfangsbedingungen $N(0) = 1$ und $N(1) = 2$, muss die gewöhnliche Fibonacci-Folge \enquote{verschoben} werden und wir sehen
-    \begin{align*}
-        N(n) = F(n+2).
-    \end{align*}
-\end{antwort}
 
 \section{Explizite und rekursive Darstellungen von Folgen}
 Wir betrachten die rekursiv definierte Folge
@@ -131,13 +79,7 @@ $a_{5000}$ nämlich alle Glieder $a_{1}, a_{2}, \ldots, a_{4999}$ zuerst bestimm
 \begin{aufgabe}{aufgabe:0404}
 Finden Sie eine \enquote{Formel}, welche $a_n$ mit lediglich einer Multiplikation und einer Addition berechnet, ohne zuerst die Vorgänger $a_{1}, a_{2}, \ldots, a_{n}$ bestimmen zu müssen. Berechnen Sie mit Hilfe dieser Formel das Folgenglied $a_{5000}$.
 \end{aufgabe}
-\begin{antwort}{aufgabe:0404}
-Wir bemerken, dass das nachfolgende Folgenglied um 4 grösser ist als sein Vorgänger. Damit ist $a_n$ genau $4n$ grösser als $a_0$ und wir erhalten
-\begin{align*}
-    a_n = a_0 + 4n = 4n - 1.
-\end{align*}
-Nun finden wir $a_{5000} = 4\cdot 5000 - 1 = 19999$.
-\end{antwort}
+\noindent
 Die in \cref{aufgabe:0404} gefundene (nicht rekursive) Darstellung von $a_n$ wird \tib{explizite Darstellung}\index{Folge!explizite Darstellung einer} von $a_n$ genannt.
 
 \begin{aufgabe}{aufgabe:0405}
@@ -147,12 +89,7 @@ Beweisen Sie durch vollständige Induktion, dass $a_n = n^2 -2n$ eine explizite 
 \end{align*}
 für $n\in\Nunit$ ist.
 \end{aufgabe}
-\begin{antwort}{aufgabe:0405}
-Wegen $a_0 = 0^2 - 2\cdot 0 = 0$ ist der Induktionsanfang gezeigt. Angenommen die Aussage gilt für $n$. Wir zeigen, dass sie auch für $n+1$ gilt, dass also $a_{n+1} = (n+1)^2 - 2(n+1) = n^2 - 1$. In der Tat ist
-\begin{align*}
-    a_{n+1} = a_n + 2(n+1) - 3 = n^2 - 2n + 2(n+1) - 3 = n^2 - 1.
-\end{align*}
-\end{antwort}
+\noindent
 Die rekursive Darstellung \cref{eq:rekkurenz} ist nicht geeignet, um $N(n)$ für grosse Werte von $n$ zu berechnen. Die Fibonacci-Folge wurde bereits im  Jahr 1202 von Leonardo da Pisa verwendet, um das Wachstum einer Kaninchenpopulation zu beschreiben. Dennoch gelang es (höchst wahrscheinlich) erst in der ersten Hälfte des 18. Jahrhunderts, eine explizite Darstellung dieser wichtigen Folge zu finden. Diese Darstellung zu finden ist also alles andere als einfach. Diese explizite Darstellung ist als \textit{Formel von Moivre-Binet} bekannt und besagt
 \begin{align}\label{eq:binet}
     F(n) = \frac{\varphi^n - (1-\varphi)^n}{\sqrt{5}},
@@ -164,13 +101,6 @@ wobei $\varphi := \frac{1+\sqrt{5}}{2}$.
 \begin{aufgabe}{aufgabe:0478}
 Berechnen Sie $F(0)$ und $F(1)$ mit Hilfe von \cref{eq:binet}. Überzeugen Sie sich, dass $F(0)$ und $F(1)$ die ersten beiden Fibonacci-Zahlen und somit insbesondere natürliche Zahlen sind.
 \end{aufgabe}
-\begin{antwort}{aufgabe:0478}
-Wir berechnen
-\begin{align*}
-    F(0) &= \frac{\varphi^0-\alpha^0}{\sqrt{5}} = 0 = F_0, \\
-    F(1) &= \frac{\varphi^1-\alpha^1}{\sqrt{5}} = \frac{\varphi-(1-\varphi)}{\sqrt{5}} = \frac{2\varphi-1}{\sqrt{5}} = \frac{1+\sqrt{5}-1}{\sqrt{5}} = 1 = F_1.
-\end{align*}
-\end{antwort}
 
 \clearpage
 \begin{aufgabe}{aufgabe:0477}
@@ -194,25 +124,9 @@ Hinweis:
     \end{align*}
 \end{itemize}
 \end{aufgabe}
-\begin{antwort}{aufgabe:0477}
-Wir beweisen zuerst die Gleichungen aus dem Hinweis:
-\begin{align*}
-    \varphi^2 &= \lr{\frac{1+\sqrt{5}}{2}}^2 = \frac{6+2\sqrt{5}}{4} = 1 + \frac{1+\sqrt{5}}{2} = 1 + \varphi, \\
-    \alpha^2 &= \lr{\frac{1-\sqrt{5}}{2}}^2 = \frac{6-2\sqrt{5}}{4} = 1 + \frac{1-\sqrt{5}}{2} = 1 + \alpha.
-\end{align*}
-In \cref{aufgabe:0478} haben wir bereits die Korrektheit der Aussage für $n=0$ und $n=1$ gezeigt. Sei nun die Aussage für ein $n\in\Nunit$ wahr.
-\begin{align*}
-    F_{n+1} & \stackrel{\text{Definition von $F_{n+1}$}}{=} F_n + F_{n-1} = \\
-    &\frac{\varphi^{n}-\alpha^{n}}{\sqrt{5}} + \frac{\varphi^{n-1}-\alpha^{n-1}}{\sqrt{5}} = \\
-    &\frac{\varphi^{n} + \varphi^{n-1} - \lr{\alpha^{n}+\alpha^{n-1}}}{\sqrt{5}} = \\
-    &\frac{\lr{\varphi + 1}\varphi^{n-1} - \lr{\lr{\alpha + 1}\alpha^{n-1}}}{\sqrt{5}} = \\
-    &\frac{\varphi^2\varphi^{n-1} - \alpha^2\alpha^{n-1}}{\sqrt{5}} = \\
-    &\frac{\varphi^{n+1}-\alpha^{n+1}}{\sqrt{5}} = \frac{\varphi^{n+1}-(1-\varphi)^{n+1}}{\sqrt{5}} = F(n+1)
-\end{align*}
-\end{antwort}
 
 \bemerkung{bemerkung:moivre}{
-Die Formel von Moivre-Binet enthält Terme, welche Computer aufgrund ihrer (nur) endlichen Arithmetik, nicht exakt darstellen können. Eine einfache Beobachtung macht die Formel aber auch für die Berechnung in endlicher Arithmetik gut zugänglich. Wir schreiben zuerst
+Die Formel von Moivre-Binet enthält Terme, welche Computer aufgrund ihrer (nur) endlichen Arithmetik nicht exakt darstellen können. Eine einfache Beobachtung macht die Formel aber auch für die Berechnung in endlicher Arithmetik gut zugänglich. Wir schreiben zuerst
 \begin{align*}
     F(n) = \frac{\varphi^n - (1-\varphi)^n}{\sqrt{5}} = \textcolor{blue}{\frac{\varphi^n}{\sqrt{5}}} - \textcolor{Green}{\frac{(1-\varphi)^n}{\sqrt{5}}}.
 \end{align*}
@@ -243,14 +157,118 @@ oder anders geschrieben:
 \end{align*}
 Der Abstand von $\textcolor{Blue}{\varphi^n/\sqrt{5}}$ zu der ganzen Zahl $F_n$ ist also kleiner als $1/2$. Es liegt damit keine ganze Zahl so nahe bei $\textcolor{Blue}{\varphi^n/\sqrt{5}}$ wie $F_n$. Die $n$-te Fibonacci-Zahl $F_n$ entspricht somit $\textcolor{Blue}{\varphi^n/\sqrt{5}}$, gerundet auf die nächste ganze Zahl:
 \begin{align}\label{eq:moivrecomp}
-    F_n = \lrs{\textcolor{blue}{\frac{\varphi^n}{\sqrt{5}}}}, \quad\text{für alle } n\in\N.
+    F_n = \lrs{\textcolor{blue}{\frac{\varphi^n}{\sqrt{5}}}} \quad\text{für alle } n\in\N.
 \end{align}
 Damit ist nun auch klar ersichtlich, dass die Fibonacci-Folge exponentiell wächst!
 }
 
 \begin{aufgabe}{aufgabe:0406}
-Verwenden Sie die Formel von Moivre-Binet um eine explizite Darstellung von $N(n)$ zu finden und schreiben Sie eine Python-Funktion \pythoninline{def N(n)}, welche $N(n)$ für gegebenes $n\in\N$ berechnet. Verwenden Sie dazu \cref{eq:moivrecomp}.
+Verwenden Sie die Formel von Moivre-Binet, um eine explizite Darstellung von $N(n)$ zu finden und schreiben Sie eine Python-Funktion \pythoninline{def N(n)}, welche $N(n)$ für gegebenes $n\in\N$ berechnet. Verwenden Sie dazu \cref{eq:moivrecomp}.
 \end{aufgabe}
+
+\begin{antwort}{aufgabe:0401}
+\begin{lstlisting}[language=Python,caption=binäre Strings ohne $11$]
+def print_binary_without_11(n, w = ''):
+    if n == 0:
+        print(w)
+        return
+    
+    if len(w) == 0 or  w[-1] != '1':
+        print_binary_without_11(n-1, w + '0')
+        print_binary_without_11(n-1, w + '1')
+    else:
+        print_binary_without_11(n-1, w + '0')
+\end{lstlisting}
+\end{antwort}
+
+\begin{antwort}{aufgabe:0402}
+    \begin{table}[H]
+        \begin{center}
+        \begin{tabular}{c|c}
+        $n$ & $N(n)$ \\ \hline
+        $0$ & $1$ \\
+        $1$ & $2$ \\ 
+        $2$ & $3$ \\
+        $3$ & $5$ \\
+        $4$ & $8$ \\
+        $5$ & $13$ \\ 
+        $6$ & $21$ \\
+        $7$ & $34$ \\
+        $8$ & $55$ \\
+        \end{tabular}
+        \end{center}
+        \caption{ausgefüllte Tabelle für $N(n)$}
+        \label{table:Nncompleted}
+    \end{table}
+\end{antwort}
+
+
+\begin{antwort}{aufgabe:0403}
+    Wir unterscheiden zwei mögliche Fälle für das Symbol $b$.
+    \begin{itemize}
+        \item Falls $b = 0$, dann hat $w$ die Form $w = xab = xa0$. Da $b = 0$ ist, kann $a$ sowohl $0$ als auch $1$ sein (es gibt keine Einschränkung für $a$). Dann hat also $w$ die Form
+        \begin{align*}
+            w = \underbrace{xa}_{=:y}0 = y0,
+        \end{align*}
+        wobei $y$ ein beliebiger String aus $L_n$ sein darf, und $L_n$ enthält $N(n)$ Elemente.
+        \item  Falls $b = 1$, dann muss $a = 0$ gelten. Für $x$ ist dann aber ein beliebiger String aus $L_{n-1}$ möglich und $L_{n-1}$ enthält $N(n-1)$ Elemente.
+    \end{itemize}
+    Da für $b$ genau zwei Fälle möglich sind und diese Fälle keine \enquote{Überlappung} aufweisen, können wir die jeweiligen Anzahlen addieren und erhalten die Gleichung
+    \begin{align}\label{eq:rekkurenz}
+        N(n+1) = N(n) + N(n-1).
+    \end{align}
+    Dies sieht aber genauso aus wie die rekursive Definition der Fibonacci-Folge! Aufgrund der bereits gefundenen Anfangsbedingungen $N(0) = 1$ und $N(1) = 2$ muss die gewöhnliche Fibonacci-Folge \enquote{verschoben} werden und wir sehen
+    \begin{align*}
+        N(n) = F(n+2).
+    \end{align*}
+\end{antwort}
+
+
+\begin{antwort}{aufgabe:0404}
+Wir bemerken, dass das nachfolgende Folgenglied um 4 grösser ist als sein Vorgänger. Damit ist $a_n$ genau $4n$ grösser als $a_0$ und wir erhalten
+\begin{align*}
+    a_n = a_0 + 4n = 4n - 1.
+\end{align*}
+Nun finden wir $a_{5000} = 4\cdot 5000 - 1 = 19999$.
+\end{antwort}
+
+
+
+\begin{antwort}{aufgabe:0405}
+Wegen $a_0 = 0^2 - 2\cdot 0 = 0$ ist der Induktionsanfang gezeigt. Angenommen die Aussage gilt für $n$. Wir zeigen, dass sie auch für $n+1$ gilt, dass also $a_{n+1} = (n+1)^2 - 2(n+1) = n^2 - 1$. In der Tat ist
+\begin{align*}
+    a_{n+1} = a_n + 2(n+1) - 3 = n^2 - 2n + 2(n+1) - 3 = n^2 - 1.
+\end{align*}
+\end{antwort}
+
+
+\begin{antwort}{aufgabe:0478}
+Wir berechnen
+\begin{align*}
+    F(0) &= \frac{\varphi^0-\alpha^0}{\sqrt{5}} = 0 = F_0, \\
+    F(1) &= \frac{\varphi^1-\alpha^1}{\sqrt{5}} = \frac{\varphi-(1-\varphi)}{\sqrt{5}} = \frac{2\varphi-1}{\sqrt{5}} = \frac{1+\sqrt{5}-1}{\sqrt{5}} = 1 = F_1.
+\end{align*}
+\end{antwort}
+
+
+\begin{antwort}{aufgabe:0477}
+Wir beweisen zuerst die Gleichungen aus dem Hinweis:
+\begin{align*}
+    \varphi^2 &= \lr{\frac{1+\sqrt{5}}{2}}^2 = \frac{6+2\sqrt{5}}{4} = 1 + \frac{1+\sqrt{5}}{2} = 1 + \varphi, \\
+    \alpha^2 &= \lr{\frac{1-\sqrt{5}}{2}}^2 = \frac{6-2\sqrt{5}}{4} = 1 + \frac{1-\sqrt{5}}{2} = 1 + \alpha.
+\end{align*}
+In \cref{aufgabe:0478} haben wir bereits die Korrektheit der Aussage für $n=0$ und $n=1$ gezeigt. Sei nun die Aussage für ein $n\in\Nunit$ wahr.
+\begin{align*}
+    F_{n+1} & \stackrel{\text{Definition von $F_{n+1}$}}{=} F_n + F_{n-1} = \\
+    &\frac{\varphi^{n}-\alpha^{n}}{\sqrt{5}} + \frac{\varphi^{n-1}-\alpha^{n-1}}{\sqrt{5}} = \\
+    &\frac{\varphi^{n} + \varphi^{n-1} - \lr{\alpha^{n}+\alpha^{n-1}}}{\sqrt{5}} = \\
+    &\frac{\lr{\varphi + 1}\varphi^{n-1} - \lr{\lr{\alpha + 1}\alpha^{n-1}}}{\sqrt{5}} = \\
+    &\frac{\varphi^2\varphi^{n-1} - \alpha^2\alpha^{n-1}}{\sqrt{5}} = \\
+    &\frac{\varphi^{n+1}-\alpha^{n+1}}{\sqrt{5}} = \frac{\varphi^{n+1}-(1-\varphi)^{n+1}}{\sqrt{5}} = F(n+1)
+\end{align*}
+\end{antwort}
+
+
 \begin{antwort}{aufgabe:0406}
 Wir haben bereits festgestellt, dass
 \begin{align*}
@@ -266,6 +284,7 @@ def N(n):
     return int(round(phi**(n+2)/sqrt5))
 \end{lstlisting}
 \end{antwort}
+
 
 \clearpage
 \shipoutAnswer
